replace logo and update admin template

--- a/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
+++ b/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Corvus Administration System</title>
+<title>Jentrata MSH::Administration System</title>
 <style>
 <!--
 th                    { font-weight: bold; color: #000000; background-color: #ECE9D8 }
@@ -41,21 +41,17 @@ th a:hover            { color: #FF0000; text-decoration: none; }
 
 <body>
 
-<table border="0" cellpadding="0" cellspacing="6" width="100%" height="100%">
+<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
 
 <tr>
 <td height="1" colspan="2">
 
    <!-- The header -->
    <p>
-   <b>
-       <a href="/corvus/admin/home"><img border=0 src="?mode=raw&amp;pagelet=logo"></a>
-       <center><font color="#808080" size="2" face="Arial">[Administration Console]</font></center>
-   </b>
+   <b><a href="/corvus/admin/home"><img border=0 src="?mode=raw&amp;pagelet=logo"></a></b>
    <hr width="100%" noshade="" color="#C0C0C0" size="1"/>
-   <font color="#808080" face="Arial">The Universal Messaging Gateway</font>
+   <font color="#808080" face="Arial">Message Handler Service</font>
    </p>
-   <br/>
 
 </td>
 </tr>
