tidy up for version numbering to be consistent with the maven project version

--- a/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
+++ b/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
@@ -126,6 +126,11 @@ th a:hover            { color: #FF0000; text-decoration: none; }
         <!-- template-south -->
 	</td>
 </tr>
+<tr>
+	<td colspan="2" height="1" class="message_frame" align="center">
+        ${project.version} - <a href="http://jentrata.org">jentrata.org</a>
+	</td>
+</tr>
 
 </table>
 
