--- a/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
+++ b/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
@@ -1,9 +1,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="icon" href="/corvus/favicon.png" type="image/png">
+<link rel="shortcut icon" href="/corvus/favicon.png" type="image/png">
 <title>Jentrata MSH::Administration System</title>
 <style>
 <!--
+body                  { font-family: Verdana,Arial; }
 th                    { font-weight: bold; color: #000000; background-color: #ECE9D8 }
 td,th                 { font-family: Verdana,Arial; font-size: 10pt; }
 td a, 
@@ -35,11 +38,22 @@ th a:hover            { color: #FF0000; text-decoration: none; }
 .module_frame         { border: 2px solid #3A92FE; }
 .content_frame        { border: 2px solid #3A92FE; padding: 6; }
 .message_frame        { border: 2px solid #3A92FE; padding: 6; }
+.header_toolbar       { text-align: right; font-size: 10pt; }
+div.header_toolbar    { display:block; position:absolute; top:0; right:5px; width:350px; }
+div.header_toolbar a  { color: #0000FF; text-decoration: none }
+div.header_toolbar a:hover  { text-decoration: underline; }
 -->
 </style>
 </head>
 
 <body>
+
+<div class="header_toolbar">
+	<a href="http://jentrata.org/documentation.html" target="_blank">documentation</a> | 
+	<a href="http://jentrata.org/community.html" target="_blank">community</a> | 
+	<a href="http://jentrata.com" target="_blank">support</a> | 
+	<a href="/corvus/logout.jsp">logout</a>
+</div>
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
 
@@ -49,8 +63,9 @@ th a:hover            { color: #FF0000; text-decoration: none; }
    <!-- The header -->
    <p>
    <b><a href="/corvus/admin/home"><img border=0 src="?mode=raw&amp;pagelet=logo"></a></b>
+   
    <hr width="100%" noshade="" color="#C0C0C0" size="1"/>
-   <font color="#808080" face="Arial">Message Handler Service</font>
+   <font color="#808080" face="Arial">Message Service Handler</font>
    </p>
 
 </td>
