--- a/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
+++ b/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
@@ -143,7 +143,8 @@ div.header_toolbar a:hover  { text-decoration: underline; }
 </tr>
 <tr>
 	<td colspan="2" height="1" class="message_frame" align="center">
-        ${project.version} - <a href="http://jentrata.org">jentrata.org</a>
+        ${version} - <a href="http://jentrata.org">jentrata.org</a>
+        <!-- Jentrata revision - ${buildNumber} -->
 	</td>
 </tr>
 
