--- a/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
+++ b/Plugins/Corvus.Admin/src/main/resources/hk.hku.cecid.piazza.corvus.core.admin/template/admin_template.htm
@@ -9,29 +9,29 @@
 body                  { font-family: Verdana,Arial; }
 th                    { font-weight: bold; color: #000000; background-color: #ECE9D8 }
 td,th                 { font-family: Verdana,Arial; font-size: 10pt; }
-td a, 
+td a,
 th a                  { color: #0000FF; text-decoration: none; }
 td a:hover,
 th a:hover            { color: #FF0000; text-decoration: none; }
 .module               { background-color: #ECE9D8; }
 .module_sel           { background-color: #6699FF; }
-.tab, 
+.tab,
 .tab_sel,
 .module,
 .module_sel           { font-family: Verdana,Arial; font-size: 10pt; padding-left: 5; padding-right: 5; }
-.tab a, 
+.tab a,
 .tab_sel a,
 .module a,
 .module_sel a         { text-decoration: none }
-.tab, 
-.tab a, 
-.module, 
+.tab,
+.tab a,
+.module,
 .module a             { color: #000000 }
-.tab_sel, 
-.tab_sel a, 
-.module_sel, 
+.tab_sel,
+.tab_sel a,
+.module_sel,
 .module_sel a         { color: #FFFFFF }
-.tab a:hover, 
+.tab a:hover,
 .module a:hover       { color: #FF0000 }
 .tab_sel a:hover,
 .module_sel a:hover   { color: #0000FF }
@@ -49,10 +49,10 @@ div.header_toolbar a:hover  { text-decoration: underline; }
 <body>
 
 <div class="header_toolbar">
-	<a href="http://jentrata.org/documentation.html" target="_blank">documentation</a> | 
-	<a href="http://jentrata.org/community.html" target="_blank">community</a> | 
-	<a href="http://jentrata.com" target="_blank">support</a> | 
-	<a href="/corvus/logout.jsp">logout</a>
+	<a href="http://jentrata.org/documentation.html" target="_blank">documentation</a> |
+	<a href="http://jentrata.org/community.html" target="_blank">community</a> |
+	<a href="http://jentrata.com" target="_blank">support</a> |
+	<a href="/jentrata/logout.jsp">logout</a>
 </div>
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
@@ -62,8 +62,8 @@ div.header_toolbar a:hover  { text-decoration: underline; }
 
    <!-- The header -->
    <p>
-   <b><a href="/corvus/admin/home"><img border=0 src="?mode=raw&amp;pagelet=logo"></a></b>
-   
+   <b><a href="/jentrata/admin/home"><img border=0 src="?mode=raw&amp;pagelet=logo"></a></b>
+
    <hr width="100%" noshade="" color="#C0C0C0" size="1"/>
    <font color="#808080" face="Arial">Message Service Handler</font>
    </p>
@@ -76,7 +76,7 @@ div.header_toolbar a:hover  { text-decoration: underline; }
     <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" width="100%" height="100%">
     <tr>
 	<td height="24">
-	
+
 	    <!-- The module tab -->
 	    <table width="100%" border="0" cellpadding="0" cellspacing="0">
 	    <tr>
@@ -89,13 +89,13 @@ div.header_toolbar a:hover  { text-decoration: underline; }
 	        <td width="1"><img border="0" src="?mode=raw&amp;pagelet=tab_right"/></td>
 	    </tr>
 	    </table>
-	    
+
 	</td>
 	</tr>
-	
+
 	<tr>
 	<td>
-        
+
          <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" width="100%" height="100%">
 	    <tr>
 	        <td width="100%" class="module_frame" valign="top">
@@ -104,7 +104,7 @@ div.header_toolbar a:hover  { text-decoration: underline; }
             </td>
 	    </tr>
 	    </table>
-        
+
 	</td>
 	</tr>
 	</table>
@@ -119,7 +119,7 @@ div.header_toolbar a:hover  { text-decoration: underline; }
             <!-- template-north -->
 	</td>
 	</tr>
-	
+
 	<tr>
 	<td>
 	    <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" width="100%" height="100%">
